--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -38,12 +38,23 @@
             android:src="@drawable/ic_map" />
 
         <ImageView
+            android:id="@+id/cart_icon"
             android:layout_width="@dimen/icon_size_28"
             android:layout_height="@dimen/icon_size_28"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/margin_10"
             android:src="@drawable/ic_shopping_cart" />
 
+        <TextView
+            android:id="@+id/cart_num_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/cart_icon"
+            android:textSize="@dimen/margin_16"
+            android:layout_marginEnd="@dimen/margin_4"
+            android:textColor="@color/bel_red_text"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
