--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -14,56 +14,100 @@
         android:layout_margin="@dimen/margin_8"
         card_view:cardCornerRadius="2dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:gravity="center|start"
+            android:orientation="vertical"
+            android:padding="@dimen/padding_4">
 
-            <ImageView
-                android:id="@+id/services_icon"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="@dimen/padding_4" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+
+                android:padding="@dimen/padding_4">
+
+                <TextView
+                    android:id="@+id/merchant_name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/offer_name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/offer_name_txt"
+                android:id="@+id/offer_desc_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/services_icon"
                 android:gravity="center"
-                android:text="Offer name"
+                android:padding="@dimen/padding_4"
+                android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+
+                android:padding="@dimen/padding_4"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/active_hrs_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/distance_user_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="5 km away"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
             <TextView
-                android:id="@+id/offer_txt"
+                android:id="@+id/uniques_offer_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/offer_name_txt"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="4dp"
-                android:layout_toEndOf="@+id/services_icon"
                 android:gravity="center"
-                android:text="Offer text"
+                android:padding="@dimen/padding_4"
+                android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/active_hrs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/offer_txt"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="4dp"
-                android:layout_toEndOf="@+id/services_icon"
-                android:gravity="center"
-                android:text="Offer Validity"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </RelativeLayout>
