--- a/app/src/main/res/layout/offers_deck_row.xml
+++ b/app/src/main/res/layout/offers_deck_row.xml
@@ -20,6 +20,35 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/merchant_name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/offer_name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
             <ImageView
                 android:id="@+id/services_icon"
                 android:layout_width="match_parent"
@@ -28,11 +57,13 @@
 
 
             <TextView
-                android:id="@+id/offer_name_txt"
+                android:id="@+id/offer_desc_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:text="Life Style"
+                android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -44,17 +75,6 @@
                 android:layout_marginTop="4dp"
                 android:gravity="center"
                 android:text=""
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/offer_txt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="5 Offers"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
