--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/settings_icon"
             android:layout_width="@dimen/icon_size_28"
             android:layout_height="@dimen/icon_size_28"
             android:src="@drawable/ic_settings" />
