--- a/app/src/main/res/layout/offers_fragment.xml
+++ b/app/src/main/res/layout/offers_fragment.xml
@@ -8,13 +8,13 @@
     <com.daprlabs.cardstack.SwipeFrameLayout
         android:id="@+id/swipe_deck_lay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         android:orientation="vertical">
 
         <com.daprlabs.cardstack.SwipeDeck
             android:id="@+id/swipe_deck"
             android:layout_width="match_parent"
-            android:layout_height="480dp"
+            android:layout_height="450dp"
             android:padding="20dp"
             swipedeck:card_spacing="10dp"
             swipedeck:max_visible="3"
@@ -29,5 +29,43 @@
         android:layout_centerInParent="true"
         android:text="No offers"
         android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/close_icon"
+        android:layout_below="@+id/swipe_deck_lay"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="No offers" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="No offers" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/close_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/margin_16"
+        android:src="@drawable/ic_close_red"
+        android:tint="@color/colorAccent" />
+
+    <ImageView
+        android:id="@+id/accept_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/margin_16"
+        android:src="@drawable/ic_check_green" />
 
 </RelativeLayout>
