--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="app_blue">#2095f2</color>
     <color name="orange">#FF5722</color>
+    <color name="red">#F44336</color>
     <color name="light_gray">#E0E0E0</color>
     <color name="green">#64DD17</color>
 </resources>
