--- a/app/src/main/res/layout/offers_deck_row.xml
+++ b/app/src/main/res/layout/offers_deck_row.xml
@@ -60,23 +60,13 @@
                 android:id="@+id/offer_desc_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_4"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/active_hrs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text=""
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
 
         </LinearLayout>
 
