--- a/app/src/main/res/layout/offers_fragment.xml
+++ b/app/src/main/res/layout/offers_fragment.xml
@@ -14,7 +14,7 @@
         <com.daprlabs.cardstack.SwipeDeck
             android:id="@+id/swipe_deck"
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="400dp"
             android:padding="20dp"
             swipedeck:card_spacing="10dp"
             swipedeck:max_visible="3"
@@ -30,24 +30,40 @@
         android:text="No offers"
         android:visibility="gone" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/close_icon"
         android:layout_below="@+id/swipe_deck_lay"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_4"
+        android:weightSum="2">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/active_hrs_txt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="No offers" />
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/distance_user_txt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="No offers" />
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="5 km away"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <ImageView
