--- a/app/src/main/res/layout/offers_fragment.xml
+++ b/app/src/main/res/layout/offers_fragment.xml
@@ -27,61 +27,66 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="No offers"
+        android:text="No Offer in"
         android:visibility="gone" />
 
+    <RelativeLayout
+        android:id="@+id/btm_lay"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/swipe_deck_lay">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/close_icon"
-        android:layout_below="@+id/swipe_deck_lay"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding_4"
-        android:weightSum="2">
 
-        <TextView
-            android:id="@+id/active_hrs_txt"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
+            android:layout_above="@+id/close_icon"
             android:gravity="center"
-            android:text=""
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:orientation="horizontal"
+            android:padding="@dimen/padding_4"
+            android:weightSum="2">
 
-        <TextView
-            android:id="@+id/distance_user_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="5 km away"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/active_hrs_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
-    <ImageView
-        android:id="@+id/close_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/margin_16"
-        android:src="@drawable/ic_close_red"
-        android:tint="@color/colorAccent" />
+            <TextView
+                android:id="@+id/distance_user_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
 
-    <ImageView
-        android:id="@+id/accept_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/margin_16"
-        android:src="@drawable/ic_check_green" />
+        <ImageView
+            android:id="@+id/close_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/margin_16"
+            android:src="@drawable/ic_close_red"
+            android:tint="@color/colorAccent" />
 
+        <ImageView
+            android:id="@+id/accept_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/margin_16"
+            android:src="@drawable/ic_check_green" />
+    </RelativeLayout>
 </RelativeLayout>
