--- a/app/src/main/res/layout/cart_detail_fragment.xml
+++ b/app/src/main/res/layout/cart_detail_fragment.xml
@@ -64,14 +64,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:orientation="horizontal"
                 android:padding="@dimen/padding_4"
-                android:weightSum="2">
+                android:weightSum="5">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:src="@drawable/ic_access_time_black"
+                    android:tint="@color/colorAccent" />
 
                 <TextView
                     android:id="@+id/active_hrs_txt"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
                     android:layout_marginTop="4dp"
@@ -80,16 +88,28 @@
                     android:text=""
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="2"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:src="@drawable/ic_location_on_black"
+                    android:tint="@color/colorAccent" />
 
                 <TextView
                     android:id="@+id/distance_user_txt"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
                     android:layout_marginTop="4dp"
-                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="5 km away"
+                    android:text=""
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
             </LinearLayout>
