--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/offer_desc_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:padding="@dimen/padding_4"
                 android:text=""
                 android:textColor="@android:color/black"
@@ -64,14 +64,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:orientation="horizontal"
                 android:padding="@dimen/padding_4"
-                android:weightSum="2">
+                android:weightSum="5">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:src="@drawable/ic_access_time_black"
+                    android:tint="@color/app_blue" />
 
                 <TextView
                     android:id="@+id/active_hrs_txt"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
                     android:layout_marginTop="4dp"
@@ -81,18 +89,30 @@
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="2" />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="4dp"
+                    android:src="@drawable/ic_location_on_black"
+                    android:tint="@color/app_blue" />
+
                 <TextView
                     android:id="@+id/distance_user_txt"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
                     android:layout_marginTop="4dp"
-                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="5 km away"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
             </LinearLayout>
+
 
             <TextView
                 android:id="@+id/uniques_offer_txt"
