--- a/app/src/main/res/layout/offers_fragment.xml
+++ b/app/src/main/res/layout/offers_fragment.xml
@@ -41,14 +41,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/close_icon"
-            android:gravity="center"
+            android:gravity="center|start"
             android:orientation="horizontal"
             android:padding="@dimen/padding_4"
-            android:weightSum="2">
+            android:layout_marginStart="@dimen/margin_16"
+            android:weightSum="5">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/ic_access_time_black"
+                android:tint="@color/app_blue" />
 
             <TextView
                 android:id="@+id/active_hrs_txt"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="4dp"
@@ -58,13 +67,25 @@
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
+            <View
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="2" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/ic_location_on_black"
+                android:tint="@color/app_blue" />
+
             <TextView
                 android:id="@+id/distance_user_txt"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="4dp"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text=""
                 android:textColor="@android:color/black"
