--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -121,7 +121,7 @@
                 android:gravity="center"
                 android:padding="@dimen/padding_4"
                 android:text=""
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="16sp" />
 
 
