--- a/app/src/main/res/layout/fargement_cart.xml
+++ b/app/src/main/res/layout/fargement_cart.xml
@@ -21,6 +21,14 @@
                 android:layout_marginTop="@dimen/margin_10" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
+        <ImageView
+            android:id="@+id/cart_empty_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/empty_cart"
+            android:visibility="gone"/>
+
         <ProgressBar
             android:id="@+id/pBar"
             android:layout_width="wrap_content"
