--- a/app/src/main/res/layout/offers_fragment.xml
+++ b/app/src/main/res/layout/offers_fragment.xml
@@ -34,17 +34,18 @@
         android:id="@+id/btm_lay"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@+id/swipe_deck_lay">
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/no_more_cards_txt">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/close_icon"
+            android:layout_marginStart="@dimen/margin_16"
             android:gravity="center|start"
             android:orientation="horizontal"
             android:padding="@dimen/padding_4"
-            android:layout_marginStart="@dimen/margin_16"
             android:weightSum="5">
 
             <ImageView
@@ -90,6 +91,12 @@
                 android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
+
+            <ProgressBar
+                android:id="@+id/pBar"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                />
         </LinearLayout>
 
         <ImageView
